Update by Afif 24May2012

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -25,9 +25,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/jAsciiChecker.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jsch-0.1.48.jar=D:\\AFIF\\Download\\Coding\\Java\\jsch-0.1.48.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsch-0.1.48.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
